# klearu

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/klearu/: Cargo.toml
crates/klearu-accel/: Cargo.toml
crates/klearu-accel/src/: lib.rs
crates/klearu-accel/src/bf16/: mod.rs
crates/klearu-accel/src/memory/: mod.rs
crates/klearu-accel/src/simd/: mod.rs
crates/klearu-bolt/: Cargo.toml
crates/klearu-bolt/src/: autograd.rs  autotune.rs  label_hash.rs  lib.rs  sparse_inference.rs
crates/klearu-core/: Cargo.toml
crates/klearu-core/benches/: benchmarks.rs
crates/klearu-core/src/: config.rs  error.rs  lib.rs
crates/klearu-core/src/bucket/: fifo.rs  mod.rs  reservoir.rs
crates/klearu-core/src/data/: dataset.rs  libsvm.rs  mod.rs
crates/klearu-core/src/hash/: dwta.rs  minhash.rs  mod.rs  simhash.rs  srp.rs  wta.rs
crates/klearu-core/src/lsh/: index.rs  maintenance.rs  mod.rs
crates/klearu-core/src/network/: layer.rs  mod.rs  net.rs  neuron.rs
crates/klearu-core/src/optim/: adam.rs  hogwild.rs  mod.rs  sgd.rs
crates/klearu-core/src/sampling/: mod.rs  threshold.rs  topk.rs  vanilla.rs
crates/klearu-core/src/tensor/: aligned.rs  mod.rs  sparse.rs
crates/klearu-dejavu/: Cargo.toml
crates/klearu-dejavu/src/: attention.rs  lib.rs  mlp.rs
crates/klearu-dejavu/src/predictor/: lsh_predictor.rs  mlp_predictor.rs  mod.rs
crates/klearu-dejavu/src/transformer/: mod.rs
crates/klearu-dpf/: Cargo.toml
crates/klearu-dpf/src/: aes_prg.rs  dcf.rs  dpf.rs  lib.rs
crates/klearu-llm/: Cargo.toml
crates/klearu-llm/src/: config.rs  error.rs  lib.rs  tensor.rs  tokenizer.rs
crates/klearu-llm/src/generate/: chat_template.rs  mod.rs  pipeline.rs  sampler.rs  sparse_pipeline.rs
crates/klearu-llm/src/model/: attention.rs  block.rs  embedding.rs  gated_deltanet.rs  kv_cache.rs  linear.rs  mlp.rs  mod.rs  rms_norm.rs  rope.rs
crates/klearu-llm/src/sparse/: calibrate.rs  mod.rs  predictor_store.rs  sparse_attention.rs  sparse_mlp.rs
crates/klearu-llm/src/weight/: loader.rs  mod.rs  name_map.rs  safetensors.rs
crates/klearu-mongoose/: Cargo.toml
crates/klearu-mongoose/src/: learnable_hash.rs  lib.rs  scheduler.rs
crates/klearu-mpc/: Cargo.toml
crates/klearu-mpc/src/: activation.rs  beaver.rs  fixed_point.rs  lib.rs  linear.rs  multiply.rs  normalization.rs  sharing.rs  transport.rs
crates/klearu-private/: Cargo.toml
crates/klearu-private/src/: ferret_transport.rs  ferret_triples.rs  lib.rs  oprf.rs  private_attention.rs  private_block.rs  private_mlp.rs  private_model.rs  private_pipeline.rs  tcp_transport.rs  weight_share.rs
crates/klearu/examples/: amazon670k.rs  data_loading.rs  hash_families.rs  lsh_index.rs  mnist_slide.rs
crates/klearu/src/: lib.rs
