[package]
name = "klearu-core"
description = "Core SLIDE engine: LSH-based sub-linear deep learning"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ndarray = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytemuck = { workspace = true }
parking_lot = { workspace = true }
crossbeam = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "benchmarks"
harness = false
