[package]
name = "klearu-dejavu"
description = "Deja Vu: contextual sparsity for transformers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
klearu-core = { workspace = true }
ndarray = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
