[package]
name = "klearu-mongoose"
description = "MONGOOSE: learnable LSH and adaptive scheduling"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
klearu-core = { workspace = true }
ndarray = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
